Fix playhead being cut off at left edge of ruler

--- a/src/timeline/media/css/main.css
+++ b/src/timeline/media/css/main.css
@@ -43,13 +43,11 @@ img {
 }
 
 /* Ruler */
-#scrolling_ruler { overflow: hidden; position: relative;line-height: 4px; }
+#scrolling_ruler { overflow: hidden; position: relative; line-height: 4px; padding-left: 13px; }
 #scrolling_tracks { height: 316px; overflow: scroll; position: relative; }
-#ruler_label { height: 39px; width: 140px; float: left; margin-bottom: 4px; }
+#ruler_label { height: 39px; width: 127px; float: left; margin-bottom: 4px; }
 #ruler_ticks { background-color:#000; }
 #ruler_time { font-size: 13pt; color: #c8c8c8; padding-top: 14px; padding-left: 17px; }
-#progress_container {margin-left:140px; overflow: hidden; height: 13px;}
-.drag_cursor { cursor: move; }
 
 /* Tracks */
 #track_controls { width: 140px; position: relative; float: left; height: 316px; overflow: hidden;}
@@ -65,7 +63,7 @@ img {
 /* Playhead */
 .playhead-line { z-index: 9998; position: absolute; height:316px; top:0px; margin-left: 12px; width:1px; background-color:#ff0024; opacity:1;}
 .playhead-line-small { z-index: 9999; position: absolute; height:20px; top:32px;; margin-left: 12px; width:1px; background-color:#ff0024; opacity:1;}
-.playhead-top { cursor:move; z-index: 9999; position: absolute; margin-left: 0px; margin-top: 12px; width:25px; height:32px; background-image: url(../images/play_head.png); opacity:1;}
+.playhead-top { cursor:move; z-index: 9999; position: absolute; margin-left: 13px; margin-top: 12px; width:25px; height:32px; background-image: url(../images/play_head.png); opacity:1;}
 .marker {position:absolute; top:30px;}
 
 /* Clips */
